# QFlightinstruments

./: .gitignore  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  Doxyfile  LICENSE_MIT.txt  QFlightInstruments.pro  README.md  make_zip.bat
doc/html/: annotated.html  annotated.js  classes.html  classqfi___a_d_i-members.html  classqfi___a_d_i.html  classqfi___a_d_i.js  classqfi___a_l_t-members.html  classqfi___a_l_t.html  classqfi___a_l_t.js  classqfi___a_s_i-members.html  classqfi___a_s_i.html  classqfi___a_s_i.js  classqfi___h_s_i-members.html  classqfi___h_s_i.html  classqfi___h_s_i.js  classqfi___n_a_v-members.html  classqfi___n_a_v.html  classqfi___n_a_v.js  classqfi___p_f_d-members.html  classqfi___p_f_d.html  classqfi___p_f_d.js  classqfi___t_c-members.html  classqfi___t_c.html  classqfi___t_c.js  classqfi___v_s_i-members.html  classqfi___v_s_i.html  classqfi___v_s_i.js  files.html  files.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  globals.html  globals_defs.html  hierarchy.html  hierarchy.js  index.html  navtree.js  navtreeindex0.js  (+32 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  search.js
docs/html/: annotated.html  class_colors-members.html  class_colors.html  class_fonts-members.html  class_fonts.html  classes.html  classqfi___a_i-members.html  classqfi___a_i.html  classqfi___a_l_t-members.html  classqfi___a_l_t.html  classqfi___a_s_i-members.html  classqfi___a_s_i.html  classqfi___colors-members.html  classqfi___colors.html  classqfi___e_a_d_i-members.html  classqfi___e_a_d_i.html  classqfi___e_h_s_i-members.html  classqfi___e_h_s_i.html  classqfi___fonts-members.html  classqfi___fonts.html  classqfi___h_i-members.html  classqfi___h_i.html  classqfi___t_c-members.html  classqfi___t_c.html  classqfi___v_s_i-members.html  classqfi___v_s_i.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e9488858e9a0f0283201638812354398.html  files.html  functions.html  functions_enum.html  functions_func.html  hierarchy.html  index.html  menudata.js  qfi___a_i_8h_source.html  qfi___a_l_t_8h_source.html  qfi___a_s_i_8h_source.html  qfi___colors_8h_source.html  qfi___e_a_d_i_8h_source.html  (+6 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
example/: CMakeLists.txt  MainWindow.h  MainWindow.ui  WidgetAI.ui  WidgetALT.h  WidgetASI.h  WidgetEADI.ui  WidgetEHSI.cpp  WidgetHI.h  WidgetHI.ui  WidgetSix.cpp  WidgetTC.cpp  WidgetVSI.cpp  WidgetVSI.ui  example.pro
qfi/: CMakeLists.txt  qfi.pro  qfi.qrc  qfi_AI.cpp  qfi_ALT.h  qfi_Colors.h  qfi_EHSI.cpp  qfi_EHSI.h  qfi_Fonts.cpp  qfi_HI.cpp  qfi_VSI.h
src/: example.pro  example1.pro  example2.pro  libqfi.pro  qfi.pro  qfi.qrc  qfi_ADI.cpp  qfi_ADI.h  qfi_ALT.cpp  qfi_ALT.h  qfi_ASI.cpp  qfi_ASI.h  qfi_HSI.cpp  qfi_HSI.h  qfi_NAV.cpp  qfi_NAV.h  qfi_PFD.cpp  qfi_PFD.h  qfi_TC.cpp  qfi_TC.h  qfi_VSI.cpp  qfi_VSI.h
src/example/: CMakeLists.txt  LayoutSquare.cpp  LayoutSquare.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  WidgetADI.cpp  WidgetADI.h  WidgetADI.ui  WidgetAI.cpp  WidgetAI.h  WidgetALT.cpp  WidgetALT.h  WidgetALT.ui  WidgetASI.cpp  WidgetASI.h  WidgetASI.ui  WidgetEADI.cpp  WidgetEADI.h  WidgetEHSI.h  WidgetEHSI.ui  WidgetHI.cpp  WidgetHSI.cpp  WidgetHSI.h  WidgetHSI.ui  WidgetNAV.cpp  WidgetNAV.h  WidgetNAV.ui  WidgetPFD.cpp  WidgetPFD.h  WidgetPFD.ui  WidgetSix.cpp  WidgetSix.h  WidgetSix.ui  WidgetTC.cpp  WidgetTC.h  WidgetTC.ui  WidgetVSI.cpp  WidgetVSI.h  WidgetVSI.ui  (+2 more)
src/qfi/: CMakeLists.txt  qfi.pri  qfi_AI.h  qfi_ALT.cpp  qfi_ALT.h  qfi_ASI.cpp  qfi_ASI.h  qfi_Colors.cpp  qfi_Colors.h  qfi_EADI.cpp  qfi_EADI.h  qfi_EHSI.cpp  qfi_EHSI.h  qfi_Fonts.cpp  qfi_Fonts.h  qfi_HI.h  qfi_TC.cpp  qfi_TC.h  qfi_VSI.cpp  qfi_VSI.h  qfi_defs.h  qfi_doxygen.h
